2002-05-14  James Henstridge  <james@daa.com.au>

	* pygtype.c (pyg_value_from_pyobject): add handler for
	G_TYPE_PARAM (fix bug #81695).
	(pyg_value_as_pyobject): same in this function.

	* codegen/argtypes.py (ULongArg): use 'O!' format code, so we can
	reduce the size of the extra code we output.
	(Int64Arg): add arg handler (to solve bug #81694).
	(UInt64Arg): add arg handler (bug #81694 again).
	(ObjectArg.write_param): simplify output code using O! code for
	the normal and default value cases.

2002-05-13  James Henstridge  <james@daa.com.au>

	* configure.in: increment version number.

	* codegen/definitions.py (MethodDef.__init__): skip the
	caller_owns_return bit if no return value clause given.
	(FunctionDef.__init__): same here.

2002-05-12  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (ObjectArg.write_return): add handler for
	ownsreturn case for GObjects.
	(BoxedArg.write_return): and for boxed types ...
	(GtkTreePathArg.write_return): handle ownsreturn.

2002-05-10  James Henstridge  <james@daa.com.au>

	* codegen/argtypes.py (StringArg.write_return): make this handler
	actually look at the ownsreturn argument.  This fixes a crasher
	when reading string type attributes (it was freeing the struct
	member!).

2002-05-09  James Henstridge  <james@daa.com.au>

	* gtk/gtkgl.defs: get rid of gtk_gl and gdk_gl prefix on some
	functions.

	* codegen/codegen.py (Wrapper.write_function_wrapper): pass
	caller_owns_return as argument to write_return.
	(Wrapper.write_getsets): add extra arg to write_return() call.

	* codegen/argtypes.py (*.write_return): add an extra "ownsreturn"
	argument to all write_return functions.

	* codegen/definitions.py (MethodDef.__init__): read a
	caller_owns_return variable.  It defaults to false if ommitted,
	unless we have a string return.
	(FunctionDef.__init__): same here, but also make
	caller_owns_return true for constructors.

2002-05-08  James Henstridge  <james@daa.com.au>
