@@ -1,3 +1,10 @@
+2002-05-16  James Henstridge  <james@daa.com.au>
+
+	* pygtype.c (pyg_value_from_pyobject): add support for
+	G_TYPE_INTERFACE, provided the interface has a prereq on
+	G_TYPE_OBJECT.
+	(pyg_value_as_pyobject): same here.
+
 2002-05-14  James Henstridge  <james@daa.com.au>
 
 	* pygtype.c (pyg_value_from_pyobject): add handler for
